guestbook/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      -  image: phico/frontend:1.0
         imagePullPolicy: Always
         name: frontend
         ports:
         -  name: frontend
            containerPort: 4200
